--- a/src/chat/member_bar.scss
+++ b/src/chat/member_bar.scss
@@ -10,6 +10,12 @@
 .clickable__91a9d:hover .childContainer__91a9d {
 	background: transparent;
 }
+// slight border lines
+.visual-refresh .container_c8ffbb,
+// # threads
+.visual-refresh .container__7641b {
+	border: none;
+}
 
 // member hover/select animations
 .member_c8ffbb {
@@ -104,7 +110,6 @@
 }
 
 // member group labels
-.membersGroup_c8ffbb {
+.visual-refresh .membersGroup_c8ffbb {
 	padding-left: 0;
-	text-align: right;
 }
